welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: not found: value ab
	else {if (ab==10 || bc==10 ||ac==10) return 5
                  ^